--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span> <!-- This status will update dynamically -->
+            <span class="profile-status"></span> <!-- No static status symbol here -->
         </div>
     </div>
 
