--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
-        <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+      <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
-            <span class="profile-status"></span> <!-- No static status symbol here -->
+            <span class="profile-status">🟢</span> <!-- This status will update dynamically -->
         </div>
     </div>
 
@@ -58,7 +58,6 @@
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
 </div>
-
         
         <!-- Social Links Section -->
         <div class="social-links-section">
