--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 <body class="dark-mode">
     <div class="container">
 
+
+<!-- Maintenance Mode Message (this is hidden by default and will show when Maintenance Mode is enabled) -->
+    <div id="maintenanceMessage" style="display: none; background-color: #ffcc00; padding: 20px; text-align: center;">
+        <h2>🚧 This site is under maintenance. Please check back later. 🚧</h2>
+    </div>        
+
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
