--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="container">
 
 
-<!-- Maintenance Mode Message (this is hidden by default and will show when Maintenance Mode is enabled) -->
-    <div id="maintenanceMessage" style="display: none; background-color: #ffcc00; padding: 20px; text-align: center;">
-        <h2>🚧 This site is under maintenance. Please check back later. 🚧</h2>
-    </div>        
+<!-- Maintenance Mode Message -->
+<div id="maintenanceMessage" style="background-color: #ffcc00; padding: 20px; text-align: center;">
+    <h2>🚧 This site is under maintenance. Please check back later. 🚧</h2>
+</div>     
 
     <!-- Profile Section -->
 <div class="profile-section">
