--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
 
 <!-- Maintenance Mode Message -->
-<div id="maintenanceMessage" style="background-color: #ffcc00; padding: 20px; text-align: center;">
-    <h2>🚧 This site is under maintenance. Please check back later. 🚧</h2>
-</div>     
+<div id="maintenanceModeMessage" class="maintenance-mode-message" style="display: none;">
+    <p>🚨 Maintenance Mode is Active! 🚨</p>
+</div>
 
     <!-- Profile Section -->
 <div class="profile-section">
