--- a/settings.html
+++ b/settings.html
@@ -63,17 +63,17 @@
                 <div class="settings-subsection owner-only">
                     <h2 class="subsection-title">Owner Only Settings</h2>
                     
-                    <!-- Maintenance Mode -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Maintenance Mode</h3>
-                            <p class="setting-description">Put the site into maintenance mode for updates</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="maintenanceModeToggle" disabled>
-                            <span class="toggle-slider"></span>
-                        </label>
+                <!-- Maintenance Mode -->
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Maintenance Mode</h3>
+                        <p class="setting-description">Put the site into maintenance mode for updates</p>
                     </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="maintenanceModeToggle" />
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
 
                     <!-- Profile Status -->
                     <div class="setting-card">
