--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 
 <!-- Maintenance Mode Message -->
-<div id="maintenanceModeMessage" class="maintenance-mode-message" style="display: none;">
-    <p>🚨 Maintenance Mode is Active! 🚨</p>
+<div id="maintenanceModeMessage" style="display: none; background-color: red; color: white; text-align: center; padding: 20px;">
+    The website is currently under maintenance. Please check back later.
 </div>
 
     <!-- Profile Section -->
