--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
+<!-- Hamburger Menu Icon -->
+<div class="hamburger" id="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</div>
+
+<!-- Navigation Menu -->
+<nav class="nav-menu" id="navMenu">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="flightplans.html">Flight Plans</a></li>
+        <li><a href="settings.html">Settings</a></li>
+    </ul>
+</nav>
+        
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
