--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
-      <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+        <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         
         <!-- Profile Status Circle (half in, half out) -->
@@ -89,7 +89,23 @@
         <img src="check.png" alt="Verified" class="verified">
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+
+    <!-- Hamburger Menu Icon -->
+    <div class="hamburger" id="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
 </div>
+
+<!-- Navigation Menu -->
+<nav class="nav-menu" id="navMenu">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="flightplans.html">Flight Plans</a></li>
+        <li><a href="settings.html">Settings</a></li>
+    </ul>
+</nav>
         
         <!-- Social Links Section -->
         <div class="social-links-section">
