--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         
-        <!-- Profile Status Circle (half in, half out) -->
+        <!-- Profile Status Circle -->
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span> <!-- This status will update dynamically -->
+            <span class="profile-status">🟢</span>
         </div>
     </div>
 
@@ -75,10 +75,8 @@
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
 
     <!-- Hamburger Menu Icon -->
-    <div class="hamburger" id="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+    <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+        &#9776; <!-- This is the hamburger icon (three horizontal bars) -->
     </div>
 </div>
 
