--- a/flightplans.html
+++ b/flightplans.html
@@ -62,30 +62,36 @@
     <!-- Main Content for Flight Plan -->
     <main class="flight-plan-content">
         <h1>Current Flight Plan</h1>
-        <div class="flight-info">
+        
+        <!-- Aircraft Section -->
+        <section id="aircraft">
             <h2>Aircraft</h2>
-            <p>Aircraft Type: Boeing 787</p>
-            <p>Aircraft Identification: ABC1234</p>
+            <!-- Aircraft data will be dynamically injected here -->
+        </section>
 
+        <!-- Route Section -->
+        <section id="route">
             <h2>Route</h2>
-            <p>Departure: New York (JFK)</p>
-            <p>Arrival: Los Angeles (LAX)</p>
-            <p>Flight Path: JFK → LAX</p>
+            <!-- Route data will be dynamically injected here -->
+        </section>
 
+        <!-- Weather Section -->
+        <section id="weather">
             <h2>Weather</h2>
-            <p>Weather at Departure: Clear skies, 25°C</p>
-            <p>Weather at Destination: Sunny, 28°C</p>
+            <!-- Weather data will be dynamically injected here -->
+        </section>
 
+        <!-- Fuel Section -->
+        <section id="fuel">
             <h2>Fuel</h2>
-            <p>Fuel Efficiency: 5,000 liters/hour</p>
-            <p>Fuel Needed: 30,000 liters</p>
+            <!-- Fuel data will be dynamically injected here -->
+        </section>
 
+        <!-- Other Factors Section -->
+        <section id="other-factors">
             <h2>Other Factors</h2>
-            <p>Altitude: 35,000 feet</p>
-            <p>Weight & Balance: Within range</p>
-            <p>Communication: VHF Channel 123.4</p>
-            <p>Emergency Procedures: Standard protocols in place</p>
-        </div>
+            <!-- Other factors data will be dynamically injected here -->
+        </section>
     </main>
 
     <!-- Scripts -->
