--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 <p><span>Date Bought:</span> November 08, 2024</p>
                 <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
                 <p><span>Battery Capacity %:</span> 100%</p>
-                <p><span>Battery Charge Cycles:</span> 124</p>
+                <p><span>Battery Charge Cycles:</span> 133</p>
             </div>
 
             <!-- Apple Watch Section -->
@@ -595,8 +595,8 @@
                 <p><span>Price:</span> $853.98</p>
                 <p><span>Date Released:</span> September 22, 2023</p>
                 <p><span>Date Bought:</span> May 17, 2024</p>
-                <p><span>OS Version:</span> WatchOS 11.3 (22S5534d)</p>
-                <p><span>Battery Capacity %:</span> 98%</p>
+                <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
+                <p><span>Battery Capacity %:</span> 97%</p>
             </div>
 
             <!-- Mac Mini Section -->
