--- a/flightplans.html
+++ b/flightplans.html
@@ -22,38 +22,45 @@
     <script src="flightplans.js"></script>
 </head>
 <body>
-    <!-- Header and navigation -->
+    <!-- Header Section -->
     <header class="header">
         <button class="home-button" aria-label="Return Home" onclick="window.location.href='index.html'"></button>
         <h1>Flight Plans - X-Plane 12</h1>
     </header>
 
-    <!-- Flight Plan Data Section -->
+    <!-- Main Flight Plan Section -->
     <div class="flight-plan-container">
+        
+        <!-- Aircraft Information Section -->
         <section id="aircraft">
             <h2>Aircraft Information</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
+        <!-- Route Information Section -->
         <section id="route">
             <h2>Route Information</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
+        <!-- Weather Information Section -->
         <section id="weather">
             <h2>Weather Information</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
+        <!-- Fuel Information Section -->
         <section id="fuel">
             <h2>Fuel Information</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
+        <!-- Other Factors Section -->
         <section id="other-factors">
             <h2>Other Factors</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
+        
     </div>
 
     <!-- Return to Home Button -->
