--- a/flightplans.html
+++ b/flightplans.html
@@ -25,7 +25,7 @@
     <!-- Header Section -->
     <header class="header">
         <button class="home-button" aria-label="Return Home" onclick="window.location.href='index.html'"></button>
-        <h1>Flight Plans - X-Plane 12</h1>
+        <h1>Flight Plans - Bus Army Dude's Page</h1>
     </header>
 
     <!-- Main Flight Plan Section -->
@@ -62,10 +62,6 @@
         </section>
         
     </div>
-
-    <!-- Return to Home Button -->
-    <footer>
-        <button class="return-home-button" onclick="window.location.href='index.html'">Return to Home</button>
-    </footer>
+    
 </body>
 </html>
