--- a/flightplans.html
+++ b/flightplans.html
@@ -63,5 +63,9 @@
         
     </div>
     
+     <!-- Footer -->
+    <footer>
+        <p>© 2025 Bus Army Dude. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
