--- a/flightplans.html
+++ b/flightplans.html
@@ -77,7 +77,12 @@
             <h2>Other Factors</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
-        
+
+        <!-- Flight Date and Time Section -->
+        <section id="flight-datetime">
+            <h2>Flight Date & Time</h2>
+            <p>Loading...</p> <!-- This will be dynamically populated -->
+        </section>
     </div>
 
     <!-- Scripts -->
