--- a/flightplans.html
+++ b/flightplans.html
@@ -72,15 +72,33 @@
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
-        <!-- Other Factors Section -->
-        <section id="other-factors">
-            <h2>Other Factors</h2>
+        <!-- Load Sheet Information Section -->
+        <section id="load-sheet">
+            <h2>Load Sheet Information</h2>
+            <p>Loading...</p> <!-- This will be dynamically populated -->
+        </section>
+
+        <!-- ATC Flight Plan Section -->
+        <section id="atc-flight-plan">
+            <h2>ATC Flight Plan</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
 
         <!-- Flight Date and Time Section -->
         <section id="flight-datetime">
             <h2>Flight Date & Time</h2>
+            <p>Loading...</p> <!-- This will be dynamically populated -->
+        </section>
+
+        <!-- Arrival and Flight Info Section -->
+        <section id="arrival-time">
+            <h2>Arrival Information</h2>
+            <p>Loading...</p> <!-- This will be dynamically populated -->
+        </section>
+        
+        <!-- Flight Number, Call Sign, and Airframe -->
+        <section id="flight-info">
+            <h2>Flight Information</h2>
             <p>Loading...</p> <!-- This will be dynamically populated -->
         </section>
     </div>
