--- a/flightplans.html
+++ b/flightplans.html
@@ -45,8 +45,9 @@
         
         <!-- Flight Status Display -->
         <div id="flight-status">
-            <!-- This will be dynamically updated to "No flights scheduled" or "Flight Plan Scheduled" -->
+            <p>Loading status...</p> <!-- This will be dynamically updated to show the status -->
         </div>
+
 
         <!-- Aircraft Information Section -->
         <section id="aircraft">
