--- a/flightplans.html
+++ b/flightplans.html
@@ -44,12 +44,12 @@
     <div class="flight-plan-container">
         
         <!-- Flight Status Display -->
-        <div id="flight-status" class="flight-scheduled"> <!-- Default class will change dynamically -->
-            <p>
-                <span class="status-icon"></span> 
-                <span id="flight-status-text">Flight is scheduled</span> <!-- This text will also change dynamically -->
-            </p>
-        </div>
+<div id="flight-status">
+    <p>
+        <span class="status-icon"></span> 
+        <span id="flight-status-text">Flight is scheduled</span>
+    </p>
+</div>
 
         <!-- Aircraft Information Section -->
         <section id="aircraft">
