--- a/flightplans.html
+++ b/flightplans.html
@@ -47,7 +47,7 @@
 <div id="flight-status">
     <p>
         <span class="status-icon"></span> 
-        <span id="flight-status-text">Flight is scheduled</span>
+        <span id="flight-status-text">Flight In Progress</span>
     </p>
 </div>
 
