--- a/flightplans.html
+++ b/flightplans.html
@@ -44,11 +44,10 @@
 
         <!-- Flight Status Display -->
         <div id="flight-status">
-            <p>
-                <span class="status-icon"></span>
-                <span id="flight-status-text">Flight In Progress</span>
-            </p>
+            <p class="status-icon"></p>
+            <p id="status-text">Loading...</p> <!-- Initially displaying 'Loading...' -->
         </div>
+
 
         <!-- Aircraft Information Section -->
         <section id="aircraft">
