--- a/flightplans.html
+++ b/flightplans.html
@@ -43,10 +43,11 @@
     <div class="flight-plan-container">
 
         <!-- Flight Status Display -->
-        <div id="flight-status">
-            <p class="status-icon"></p>
-            <p id="status-text">Loading...</p> <!-- Initially displaying 'Loading...' -->
+        <div id="flight-status" class="no-flight-scheduled">
+          <span class="status-icon"></span>
+          <p id="flight-status-text">Loading...</p>
         </div>
+
 
 
         <!-- Aircraft Information Section -->
