--- a/flightplans.html
+++ b/flightplans.html
@@ -44,64 +44,62 @@
 
         <!-- Flight Status Display -->
         <div id="flight-status" class="no-flight-scheduled">
-          <span class="status-icon"></span>
-          <p id="flight-status-text">Loading...</p>
+            <span class="status-icon"></span>
+            <p id="flight-status-text">Loading...</p>
         </div>
 
-
-
         <!-- Aircraft Information Section -->
-        <section id="aircraft">
+        <section id="aircraft" class="flight-section">
             <h2>Aircraft Information</h2>
-            <p>Loading...</p>
+            <p id="aircraft-info">Loading...</p>
         </section>
 
         <!-- Route Information Section -->
-        <section id="route">
+        <section id="route" class="flight-section">
             <h2>Route Information</h2>
-            <p>Loading...</p>
+            <p id="route-info">Loading...</p>
         </section>
 
         <!-- Weather Information Section -->
-        <section id="weather">
+        <section id="weather" class="flight-section">
             <h2>Weather Information</h2>
-            <p>Loading...</p>
+            <p id="weather-info">Loading...</p>
         </section>
 
         <!-- Fuel Information Section -->
-        <section id="fuel">
+        <section id="fuel" class="flight-section">
             <h2>Fuel Information</h2>
-            <p>Loading...</p>
+            <p id="fuel-info">Loading...</p>
         </section>
 
         <!-- Load Sheet Information Section -->
-        <section id="load-sheet">
+        <section id="load-sheet" class="flight-section">
             <h2>Load Sheet Information</h2>
-            <p>Loading...</p>
+            <p id="load-sheet-info">Loading...</p>
         </section>
 
         <!-- ATC Flight Plan Section -->
-        <section id="atc-flight-plan">
+        <section id="atc-flight-plan" class="flight-section">
             <h2>ATC Flight Plan</h2>
-            <p>Loading...</p>
+            <p id="atc-info">Loading...</p>
         </section>
 
         <!-- Flight Date and Time Section -->
-        <section id="flight-datetime">
+        <section id="flight-datetime" class="flight-section">
             <h2>Flight Date & Time</h2>
-            <p>Loading...</p>
+            <p id="flight-datetime-info">Loading...</p>
         </section>
 
         <!-- Arrival and Flight Info Section -->
-        <section id="arrival-time">
+        <section id="arrival-time" class="flight-section">
             <h2>Arrival Information</h2>
-            <p>Loading...</p>
+            <p id="arrival-time-info">Loading...</p>
         </section>
 
         <!-- Flight Number, Call Sign, and Airframe -->
-        <section id="flight-info">
+        <section id="flight-info" class="flight-section">
             <h2>Flight Information</h2>
-            <p>Loading...</p>
+            <p id="flight-number-info">Loading...</p>
         </section>
     </div>
 
