--- a/settings.html
+++ b/settings.html
@@ -59,37 +59,35 @@
                     </div>
                 </div>
 
-                <!-- Sign In with GitHub Button -->
-    <div id="auth-section">
-        <button id="github-login" class="oauth-btn">Sign in with GitHub</button>
-    </div>
+                <!-- Owner Only Settings Section -->
+                <div class="settings-subsection owner-only">
+                    <h2 class="subsection-title">Owner Only Settings</h2>
+                    
+                <!-- Maintenance Mode -->
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Maintenance Mode</h3>
+                        <p class="setting-description">Put the site into maintenance mode for updates</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="maintenanceModeToggle" />
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
 
-    <!-- Owner Only Settings Section (Initially Hidden) -->
-    <div id="owner-settings" class="settings-section" style="display: none;">
-        <h2>Owner Only Settings</h2>
-        
-        <!-- Maintenance Mode -->
-        <div class="setting-card">
-            <h3>Maintenance Mode</h3>
-            <label class="toggle-switch">
-                <input type="checkbox" id="maintenanceModeToggle" />
-                <span class="toggle-slider"></span>
-            </label>
-        </div>
-
-        <!-- Profile Status -->
-        <div class="setting-card">
-            <h3>Profile Status</h3>
-            <select id="profileStatusSelect">
-                <option value="online">🟢 Online</option>
-                <option value="idle">🟡 Idle</option>
-                <option value="offline">🔘 Offline</option>
-            </select>
-        </div>
-
-        <!-- Sign Out Button -->
-        <button class="sign-out-btn" onclick="signOut()">Sign Out</button>
-    </div>
+                    <!-- Profile Status -->
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Profile Status</h3>
+                            <p class="setting-description">Set profile status (Online, Idle, Offline)</p>
+                        </div>
+                        <select id="profileStatusSelect" class="select-input" disabled>
+                            <option value="online">🟢 Online</option>
+                            <option value="idle">🟡 Idle</option>
+                            <option value="offline">🔘 Offline</option>
+                        </select>
+                    </div>
+                </div>
 
                 <!-- Danger Zone Section -->
                 <div class="settings-subsection danger-zone">
