--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                 <h2>TikTok Creator Shoutouts</h2>
                 <p id="tiktok-last-updated-timestamp"></p>
             </div>
+            <!-- Message Container: Displayed when TikTok is unavailable -->
+            <div class="tiktok-message" style="display: none;">
+                <!-- Message will be dynamically inserted here when TikTok is unavailable -->
+            </div>
             <div class="creator-grid">
                 <!-- Cards will be dynamically generated here -->
             </div>
