--- a/index.html
+++ b/index.html
@@ -147,15 +147,8 @@
         <div class="shoutouts-section section">
             <div id="tiktok-shoutouts">
                 <h2>TikTok Creator Shoutouts</h2>
-                <p id="tiktok-last-updated-timestamp"></p> <!-- Will show last updated time -->
+                <p id="tiktok-last-updated-timestamp"></p>
             </div>
-        
-            <!-- Message Container: Displayed when TikTok is unavailable -->
-            <div class="tiktok-message" style="display: none;">
-                <!-- Message will be dynamically inserted here when TikTok is unavailable -->
-            </div>
-        
-            <!-- Creator Cards Grid -->
             <div class="creator-grid">
                 <!-- Cards will be dynamically generated here -->
             </div>
