--- a/index.html
+++ b/index.html
@@ -672,5 +672,6 @@
     <script src="settings.js"></script>
     <script src="events.js"></script>
     <script src="version.js"></script>
+    <script src="creatorshoutouts.js"></script>
 </body>
 </html>                
