--- a/index.html
+++ b/index.html
@@ -176,17 +176,18 @@
             </div>
         </div>
         
-        <!-- Links Section -->
-        <div class="links-section section">
+        <!-- Useful Links Section -->
+        <div class="useful-links-section section">
             <h2 class="section-title">Useful Links</h2>
-            <div class="links">
-                <a href="https://rivers-merch-store.printify.me/products" target="_blank">Merch Store (Printify)</a>
-                <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank">Merch Store (Fourthwall)</a>
-                <a href="https://discord.gg/NjMtuZYc52" target="_blank">Join the Bus Army Dude's Community Discord Server!</a>
-                <a href="https://forms.gle/wmugwzd7W3VGghw6A" target="_blank">Bug Report Form!</a>
-                <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank">Feedback or Suggestions Form!</a>
+            <div class="links-container">
+                <a href="https://rivers-merch-store.printify.me/products" target="_blank" class="link-button">Merch Store (Printify)</a>
+                <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank" class="link-button">Merch Store (Fourthwall)</a>
+                <a href="https://discord.gg/NjMtuZYc52" target="_blank" class="link-button">Join the Bus Army Dude's Community Discord Server!</a>
+                <a href="https://forms.gle/wmugwzd7W3VGghw6A" target="_blank" class="link-button">Bug Report Form!</a>
+                <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank" class="link-button">Feedback or Suggestions Form!</a>
             </div>
         </div>
+
         
         <!-- Countdown Section -->
         <div class="countdown-section">
