--- a/index.html
+++ b/index.html
@@ -569,21 +569,24 @@
         <div class="tech-section section">
             <h2>Tech Information</h2>
             
-            <!-- iPhone Section -->
-            <div class="tech-item">
-                <h3>iPhone 16 Pro</h3>
-                <p><span>Model:</span> iPhone 16 Pro</p>
-                <p><span>Material:</span> Titanium</p>
-                <p><span>Storage:</span> 128GB</p>
-                <p><span>Battery Capacity:</span> 3,582mAh</p>
-                <p><span>Color:</span> Natural Titanium</p>
-                <p><span>Price:</span> $1,067.49</p>
-                <p><span>Date Released:</span> September 20, 2024</p>
-                <p><span>Date Bought:</span> November 08, 2024</p>
-                <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
-                <p><span>Battery Capacity %:</span> 100%</p>
-                <p><span>Battery Charge Cycles:</span> 133</p>
+          <!-- iPhone Section -->
+        <div class="tech-item">
+            <h3>iPhone 16 Pro</h3>
+            <p><span>Model:</span> iPhone 16 Pro</p>
+            <p><span>Material:</span> Titanium</p>
+            <p><span>Storage:</span> 128GB</p>
+            <p><span>Battery Capacity:</span> 3,582mAh</p>
+            <p><span>Color:</span> Natural Titanium</p>
+            <p><span>Price:</span> $1,067.49</p>
+            <p><span>Date Released:</span> September 20, 2024</p>
+            <p><span>Date Bought:</span> November 08, 2024</p>
+            <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
+            <p><span>Battery Health:</span></p>
+            <div class="battery-icon">
+                <div class="battery-level" style="width: 100%;">100%</div>
             </div>
+            <p><span>Battery Charge Cycles:</span> 133</p>
+        </div>
 
             <!-- Apple Watch Section -->
             <div class="tech-item">
@@ -597,8 +600,10 @@
                 <p><span>Date Released:</span> September 22, 2023</p>
                 <p><span>Date Bought:</span> May 17, 2024</p>
                 <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
-                <p><span>Battery Capacity %:</span> 97%</p>
-            </div>
+                <p><span>Battery Health:</span></p>
+                <div class="battery-icon">
+                    <div class="battery-level" style="width: 97%;">97%</div>
+                </div>
 
             <!-- Mac Mini Section -->
             <div class="tech-item">
