--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         <div class="social-links-section">
             <h2>Connect with Me</h2>
             <div class="social-links-container">
+                <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
+                    <img src="tiktok.png" alt="TikTok" class="social-icon">
+                    <span>TikTok</span>
+                </a>
                 <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
                     <img src="youtube.png" alt="YouTube" class="social-icon">
                     <span>YouTube</span>
@@ -138,6 +142,17 @@
         </section>
 
         <div id="loading-spinner" class="spinner"></div>
+        
+        <!-- TikTok Shoutouts Section -->
+        <div class="shoutouts-section section">
+            <div id="tiktok-shoutouts">
+                <h2>TikTok Creator Shoutouts</h2>
+                <p id="tiktok-last-updated-timestamp"></p>
+            </div>
+            <div class="creator-grid">
+                <!-- Cards will be dynamically generated here -->
+            </div>
+        </div>
         
         <!-- Instagram Shoutouts Section -->
         <div class="shoutouts-section section">
