--- a/index.html
+++ b/index.html
@@ -582,8 +582,8 @@
                 <p><span>Date Bought:</span> November 08, 2024</p>
                 <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
                 <p><span>Battery Health:</span></p>
-                <div class="battery-icon">
-                    <div class="battery-level" style="width: 100%;">100%</div>
+                <div class="battery-icon full">
+                    <div class="battery-text">100%</div>
                 </div>
                 <p><span>Battery Charge Cycles:</span> 139</p>
             </div>
@@ -601,10 +601,11 @@
                 <p><span>Date Bought:</span> May 17, 2024</p>
                 <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
                 <p><span>Battery Health:</span></p>
-                <div class="battery-icon">
-                    <div class="battery-level" style="width: 97%;">97%</div>
+                <div class="battery-icon medium">
+                    <div class="battery-text">97%</div>
                 </div>
             </div>
+
             
             <!-- Mac Mini Section -->
             <div class="tech-item">
