--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         <div class="tech-section section">
             <h2>Tech Information</h2>
             
-            <!-- iPhone Section -->
+           <!-- iPhone Section -->
             <div class="tech-item">
                 <h3>iPhone 16 Pro</h3>
                 <p><span>Model:</span> iPhone 16 Pro</p>
@@ -583,6 +583,7 @@
                 <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
                 <p><span>Battery Health:</span></p>
                 <div class="battery-icon full">
+                    <div class="battery-level"></div>
                     <div class="battery-text">100%</div>
                 </div>
                 <p><span>Battery Charge Cycles:</span> 139</p>
@@ -602,10 +603,10 @@
                 <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
                 <p><span>Battery Health:</span></p>
                 <div class="battery-icon medium">
-                    <div class="battery-text">75%</div>
+                    <div class="battery-level"></div>
+                    <div class="battery-text">97%</div>
                 </div>
             </div>
-
             
             <!-- Mac Mini Section -->
             <div class="tech-item">
