--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                 <p><span>Battery Charge Cycles:</span> 139</p>
             </div>
             
-            <!-- Apple Watch Section -->
+            <!-- Apple Watch Ultra 2 Section -->
             <div class="tech-item">
                 <h3>Apple Watch Ultra 2</h3>
                 <p><span>Model:</span> Apple Watch Ultra 2</p>
@@ -601,12 +601,10 @@
                 <p><span>Date Bought:</span> May 17, 2024</p>
                 <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
                 <p><span>Battery Health:</span></p>
-                <div class="battery-icon low-power">
-                    <div class="battery-level" style="width: 85%;">85%</div>
+                <div class="battery-icon">
+                    <div class="battery-level" style="width: 97%;">97%</div>
                 </div>
             </div>
-
-
             
             <!-- Mac Mini Section -->
             <div class="tech-item">
