--- a/index.html
+++ b/index.html
@@ -581,9 +581,9 @@
                 <p><span>Date Released:</span> September 20, 2024</p>
                 <p><span>Date Bought:</span> November 08, 2024</p>
                 <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
-                <p><span>Battery Health:</span></p>
                 <div class="battery-icon">
-                    <div class="battery-level" style="width: 100%;">100%</div>
+                    <div class="battery-level" style="width: 100%;"></div>
+                    <div class="battery-percentage">100%</div>
                 </div>
                 <p><span>Battery Charge Cycles:</span> 139</p>
             </div>
@@ -602,7 +602,8 @@
                 <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
                 <p><span>Battery Health:</span></p>
                 <div class="battery-icon">
-                    <div class="battery-level" style="width: 75%;">75%</div>
+                    <div class="battery-level" style="width: 97%;"></div>
+                    <div class="battery-percentage">97%</div>
                 </div>
             </div>
             
