--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
         <p><span>Date Released:</span> September 20, 2024</p>
         <p><span>Date Bought:</span> November 08, 2024</p>
         <p><span>OS Version:</span> iOS 18.3 (22D63)</p>
+        <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
@@ -602,8 +603,8 @@
         <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
-            <div class="battery-level" style="width: 97%;"></div>
-            <div class="battery-percentage">97%</div>
+            <div class="battery-level" style="width: 20%;"></div>
+            <div class="battery-percentage">20%</div>
         </div>
     </div>
     
