--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 139</p>
+        <p><span>Battery Charge Cycles:</span> 140</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -618,7 +618,7 @@
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.3 Beta (24D5055b)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.3 (24D60)</p>
     </div>
 </div>
 
